--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 		<select class="type">
 			<option value="all">Tout</option>
 			<option value="person">Personne</option>
-			<option value="media">Media</option>
+			<option value="text">Text</option>
+			<option value="audio">Audio</option>
+			<option value="video">Video</option>
+			<option value="image">Image</option>
 			<option value="city">Ville</option>
 		</select>
 		<input type="text" name="query" class="query" size="60">
