--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>
-		</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Where is Justo</title>
 		<link rel="stylesheet" type="text/css" href="css/groupe.css" />
 		<script type="text/javascript" src="js/query.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 	</head>
+	
 	<body>
-	<form id='form1'>
+		<form id='form1'>
 		<select class="type">
 			<option value="all">Tout</option>
 			<option value="person">Personne</option>
