--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
                 </div>
 
                 <div id="side_search">
-                	<div id="picto">
+                	<div id="role">
 	                	<h1>themes</h1>
-	                	<p>picto1 - picto2<p>
-	                	<p>picto3 - picto4<p>
-	                	<p>picto5 - picto6<p>
 	                </div>
 	                
 	                <div id="tags">
