--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 	                	<h1>themes</h1>
 	                </div>
 	                
-	                <div id="tags">
+	                <div id="tag">
 	                	<h1>keywords</h1>
-	                	<p>sport, marcher, pix, tamere, iLoveDino, Yoan, Rulio<p>
 	                </div>
 	                <div id="groupname">
 	                	<h1>group names</h1>
-	                	<p>iLoveDino, FLMMM, BLA, TRUC<p>
 	                </div>
 	            </div>
 
