--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
 					<option value="10" selected="selected">10</option>
 					<option value="20">20</option>
 					<option value="50">50</option>
+				</select></br>
+				<label>Trier</label>
+				<select class="rows">
+					<option value="role asc" selected="selected">Role alphabétique</option>
+					<option value="role desc">Role alphabétique inverse</option>
+					<option value="person name">20</option>
+					<option value="person name">50</option>
 				</select>
 				<input type="button" value="rechercher" name="btn_query" class="btn_query">
 			</form>
