--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 				<form id='form1'>
 					<label>Recherche</label>
-					<input type="text" name="query" class="query" size="60">
+					<input type="text" name="query" class="query">
 				</br>
 				<!--
 				<select class="type">
@@ -60,7 +60,8 @@
 					<option value="person name">20</option>
 					<option value="person name">50</option>
 				</select>
-				<input type="button" value="rechercher" name="btn_query" class="btn_query">
+				</br>
+				<input type="button" value="SEARCH" name="btn_query" class="btn_query">
 			</form>
 			
 			<div id="results"></div>
