--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
 					<option value="50">50</option>
 				</select></br>
 				<label>Trier</label>
-				<select class="rows">
+				<select class="sort">
 					<option value="role asc" selected="selected">Role alphabétique</option>
 					<option value="role desc">Role alphabétique inverse</option>
 					<option value="person name">20</option>
 					<option value="person name">50</option>
+				</select>
+				
+				<label>Ordre</label>
+				<select class="order">
+					<option value="asc" selected="selected">Croissant</option>
+					<option value="desc">Décroissant</option>
 				</select>
 				</br>
 				<input type="button" value="SEARCH" name="btn_query" class="btn_query">
