compteur, page précédente et tri

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 				</select></br>
 				<label>Trier</label>
 				<select class="sort">
-					<option value="role asc" selected="selected">Role alphabétique</option>
-					<option value="role desc">Role alphabétique inverse</option>
-					<option value="person name">20</option>
-					<option value="person name">50</option>
+					<option value="" selected="selected">---</option>
+					<option value="creationDate">Date de création</option>
+					<option value="city.name">Nom de ville</option>
+					<option value="lastname">Nom de personne</option>
 				</select>
 				
 				<label>Ordre</label>
